--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -42,7 +42,24 @@
 
 }
 
-.canteen-image{
-    width: 100px;
+.areaImage-container{
+display: inline-flexbox;
+justify-content: space-around;
+flex-direction: column;
+}
+
+.buttons-container {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: white;
+}
+
+
+.buttons-container img{
+    padding: 10px;
+    width: 20rem;
 }
 
