--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -1,49 +1,13 @@
-.firebase-image {
-  position: relative;
-  width: fit-content;
-  height: 100px;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-
-.response-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align:left;
-  margin-top:70px;
-  color: white;
-  white-space: pre-line;
-}
-
-.step p img{
-  position: relative;
-  padding: 15px;
-  
-}
-
-.json-response{
-  background-color: #ea9800;
-  padding: 10px;
-}
-
-.response-paragraph{
-  font-size:20px;
-  line-height:30px;
-  max-width:580px;
-  text-align: center;
-}
 
 .choices-button{
     display: flexbox;
-    justify-content: space-evenly;
+    justify-content: space-around;
     overflow: hidden;
     position: relative;
     background-color: #7E0001;
 
 }
-.e-button button{
+.choices-button button{
   display: inline-block;
     justify-content: space-around;
     align-items: center;
@@ -56,6 +20,7 @@
     cursor: pointer;
     transition: background 0.3s ease;
     z-index: 40;
+    width: fit-content;
 
 }
 
@@ -63,11 +28,12 @@
     background: linear-gradient(to bottom, #f1c500, #c40606); /* Gradient color */
 }
 
-.choices-button button.active {
+.choices-button button.active-button {
     background: linear-gradient(to bottom, #ea9800, #ea9800); /* Active button gradient color */
     color: #ffffff;
   }
 
+  
   
   
   
