--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,7 @@ color: white;
   padding: 5px;
   line-height: 1.5; /* Adjust this value to control the line spacing */
   z-index: 50;
+  height: 200vh;
   
 }
 
