--- a/src/App.css
+++ b/src/App.css
@@ -138,9 +138,10 @@ color: white;
 }
 
 .container{
+  top: 0;
   white-space: pre-line;
   color: rgb(255, 255, 255);
-  overflow-y: scroll;
+  overflow: scroll;
   padding: 5px;
   line-height: 1.5; /* Adjust this value to control the line spacing */
   z-index: 50;
@@ -242,10 +243,10 @@ input {
 
 .transcript{
   color: white;
-  position:relative;
+  position:fixed;
   text-align: center;
   justify-content: center;
   align-items: center;
-  z-index: 25;
+  z-index: 1500;
   
 }
