--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -1,6 +1,7 @@
 .showImage{
     position: fixed;
     display: block;
+
 }
 
 .image-container{
@@ -37,15 +38,20 @@
 display: inline-flexbox;
 justify-content: space-around;
 flex-direction: column;
+position: relative;
 }
 
 .buttons-container {
     width: 100%;
     position: relative;
+    top: 0;
+    overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
+
+    transition: transform 0.3s ease-in-out; /* Adjust the duration and easing function as needed */
 }
 
 
