--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -5,9 +5,10 @@
     overflow: hidden;
     position: fixed;
     background-color: #7E0001;
-    z-index: 500;
+    z-index: 99;
     top: 20%;
     padding: 10px;
+    width: 100%;
 
 }
 .choices-button button{
