--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -22,13 +22,18 @@
 }
 
 .text-gif{
-    position: relative;
+    position: fixed;
     color: #ffffff;
+    padding: 10px;
+    text-align: center;
+    align-items: center;
+    width: 100%;
 }
 
 .gif img{
-    position: relative;
-    width: 46vh;
+    position: static;
+    width: 100%;
+    align-items: center;
     padding: 15px;
 }
 
@@ -39,6 +44,7 @@
     background-color: #f1c500;
     width: fit-content;
     left: 5%;
+    top: 2.5vh;
 }
 .areaImagecontainer{
 display: inline-flexbox;
@@ -51,8 +57,8 @@ position: relative;
     padding: 30px;
     width: 100%;
     position: relative;
-    top: 45px;
-    overflow-y: scroll;
+    top: 5vh;
+    overflow: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,7 +69,8 @@ position: relative;
 
 
 .buttons-container img{
-    width: 100%;
+    width: 40vh;
+    position: static;
     border: #f1c500 solid 5px;
     border-radius: 3%;
 
