--- a/src/showRespose/showResponse.css
+++ b/src/showRespose/showResponse.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 10px;
-    top: 170px;
+    top: 35vh;
+    overflow: auto;
 }
 
 .step h4{
