--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -30,13 +30,17 @@
     top: 17vh;
 }
 
-.gif img{
-    position: static;
+.gif{
     width: 100%;
-    align-items: center;
+    position: relative;
+}
+
+.gif img{
+    position: fixed;
+    width: 100%;
+    height: fit-content;
     padding: 15px;
     margin-top: 27vh;
-    justify-content: center;
     
 }
 
@@ -63,20 +67,20 @@ position: relative;
     padding: 30px;
     width: 100%;
     position: relative;
-    top: 20vh;
-    overflow: scroll;
+    top: 22vh;
+    overflow: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
 
-    transition: transform 0.3s ease-in-out; /* Adjust the duration and easing function as needed */
 }
 
 
 .buttons-container img{
+    top: 0;
     width: 40vh;
-    position: static;
+    position: sticky;
     border: #f1c500 solid 5px;
     border-radius: 3%;
 
