--- a/src/App.css
+++ b/src/App.css
@@ -250,15 +250,26 @@ input {
     display: flex;
     top: 80%;
     width: 100%;
+  height: max-content;
 }
 
 .suggestions button{
   background: linear-gradient(to bottom, #c40606, #f1c500); /* Gradient color */
   border: none;
-  width: 15vh;
-  height: fit-content;
   padding: 10px;
   margin: 10px;
-  border-radius: 20%;
+  border-radius: 20px;
+  font-size: 1rem;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+}
 
+.list-result {
+  position: fixed;
+  color:#7E0001;
+  bottom: 8vh;
+  background-color: white;
+  padding: 10px;
+  width: 100%;
 }
