--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -48,8 +48,8 @@
     position: relative;
     justify-content: space-between;
     background-color: #f1c500;
-    width: 20%;
-    left: 4%;
+    width: max-content;
+    left: 2%;
     top: 18vh;
     padding: 10px;
     z-index: 100;
@@ -117,25 +117,28 @@ position: relative;
   }
 
   .direction-container {
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
+    align-items:flex-start;
     width: 100%;
     height: 20%;
     text-align: center;
     position: relative;
     display: flex;
+    padding: 20px;
   }
 
   ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display: block;
+    width: 100%;
   }
 
   .showImage-button {
     position: relative;
-    display: block;
-    padding: 10px;
+    display:inline;
+    padding: 15px;
     margin-bottom: 5px;
     background-color: #ffaa00;
     color: #ffffff;
@@ -143,6 +146,7 @@ position: relative;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    width: 100%;
   }
 
   .direction-modal {
@@ -159,6 +163,7 @@ position: relative;
     left: 5vh;
     position: fixed;
     border:#f1c500 solid 2px;
+    overflow: hidden;
   }
 
   .modal-content {
