--- a/src/App.css
+++ b/src/App.css
@@ -197,7 +197,7 @@ input {
 /* Media Query for screens with a maximum width of 768px (typical mobile screens) */
 @media (max-width: 768px) {
   input {
-    width: 36vh; /* Adjust the width to take up 90% of the parent container */
+    width: 40vh; /* Adjust the width to take up 90% of the parent container */
     margin: 5px; /* Reduce the margin for smaller screens */
   }
 }
@@ -208,6 +208,12 @@ input {
 
 .keyBoard{
   margin-right: 10px;
+}
+
+.error-message {
+  position: relative;
+  z-index: 101;
+  background-color: #000000;
 }
 
 .start{
