--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,30 @@
   overflow: hidden;
 }
 
+/* Responsive styles for small screens (up to 767px) */
+@media only screen and (max-width: 767px) {
+  body {
+    font-size: 16px; /* Adjust font size for smaller screens */
+  }
+  /* Add more styles for small screens as needed */
+}
+
+/* Responsive styles for medium screens (768px to 991px) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  body {
+    font-size: 18px; /* Adjust font size for medium screens */
+  }
+  /* Add more styles for medium screens as needed */
+}
+
+/* Responsive styles for large screens (992px and above) */
+@media only screen and (min-width: 992px) {
+  body {
+    font-size: 20px; /* Adjust font size for large screens */
+  }
+  /* Add more styles for large screens as needed */
+}
+
 body{
   position: relative;
   background-color: #7E0001;
@@ -41,7 +65,7 @@ header{
   position: fixed;
   width: 100%;
   z-index: 101;
-  padding: 6px;
+  padding: 4px;
   overflow: -moz-hidden-unscrollable;
 }
 
@@ -134,13 +158,12 @@ color: white;
   align-items: center;
   padding: 10px;
   color: white;
-  top: 17%;
+  top: 18%;
   position: fixed;
   background-color: #7E0001;
-  z-index: 100;
+  z-index: 104;
   width: 100%;
   font-size: 2vh;
-  float: right;
 }
 
 .container{
@@ -189,6 +212,7 @@ color: white;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
+  margin-right: 25px;
 
 }
 
@@ -210,7 +234,7 @@ input {
 /* Media Query for screens with a maximum width of 768px (typical mobile screens) */
 @media (max-width: 768px) {
   input {
-    width: 20em; /* Adjust the width to take up 90% of the parent container */
+    width: 15em; /* Adjust the width to take up 90% of the parent container */
     margin: 5px; /* Reduce the margin for smaller screens */
     align-items: center;
   }
