--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -6,7 +6,7 @@
     position: relative;
     background-color: #7E0001;
     z-index: 99;
-    top: 27vh;
+    top: 9em;
     padding: 5px;
     width: 100%;
 
