--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   display: block;
   justify-content: space-around;
   overflow: hidden;
+  font-family: sans-serif;
 }
 
 /* Responsive styles for small screens (up to 767px) */
@@ -64,6 +65,7 @@ header{
   top: 0;
   position: fixed;
   width: 100%;
+  height: 6em;
   z-index: 101;
   padding: 4px;
   overflow: -moz-hidden-unscrollable;
@@ -71,19 +73,27 @@ header{
 
 .logo-name {
   background-color: #7E0001;
-  display: block;
+  display: flexbox;
   position: relative;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   text-align: center;
   width: 100%;
+  color: white;
+  font-family: 'Krona One';
+}
+
+.logo-name p{
+  bottom: 1.5em;
+  position: relative;
+  display: block;
+  margin: 0;
+  line-height: normal;
 }
 
 .logo-name img{
-  width: 6em;
+  width: 5.5em;
   position: relative;
-  display: flexbox;
-  height: 6em;
   align-items: center;
   justify-content: center;
 }
@@ -102,19 +112,7 @@ header{
   z-index: 155;
 }
 
-h1{
-  position: relative;
-  bottom: .8em;
-  align-items: center;
-  text-align: center;
-}
-
-.app-neym {
-  font-family: 'Krona One';
-  color: white;
-}
-
-.app-neym span{
+.logo-name span{
   color: rgb(236, 166, 4);
   font-family: 'Krona One';
 }
@@ -158,10 +156,10 @@ color: white;
   align-items: center;
   padding: 10px;
   color: white;
-  top: 18%;
+  top: 6.1em;
   position: fixed;
   background-color: #7E0001;
-  z-index: 102;
+  z-index: 100;
   width: 100%;
   font-size: 2vh;
 }
@@ -294,8 +292,8 @@ input {
   text-align: center;
   align-items: center;
   position: fixed;
-    display: block;
-    top: 63%;
+    display: flex;
+    top: 73%;
     width: 100%;
     padding: 10px;
 }
@@ -303,12 +301,14 @@ input {
 .suggestions button{
   background: linear-gradient(to bottom, #c40606, #f1c500); /* Gradient color */
   border: none;
-  padding: 10px;
+  padding: 1px;
   border-radius: 20px;
-  font-size: 1rem;
-  width: 100%;
+  width: 8em;
+  height: 3em;
   display: flex;
   margin-top: 10px;
+  align-items: center;
+  justify-content: center;
 }
 
 .list-result {
