--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -26,7 +26,7 @@
     text-align: center;
     align-items: center;
     width: 100%;
-    top: 17vh;
+    top: 6.5em;
 }
 
 .gif{
@@ -39,7 +39,7 @@
     width: 45vh;
     height: fit-content;
     padding: 15px;
-    margin-top: 18vh;
+    top: 6em;
     
 }
 
@@ -50,7 +50,7 @@
     background-color: #f1c500;
     width: max-content;
     left: 2%;
-    top: 18vh;
+    top: 8.2em;
     padding: 10px;
     z-index: 100;
 }
@@ -64,10 +64,10 @@ position: relative;
 }
 
 .buttons-container {
-    padding: 30px;
+    padding: 20px;
     width: 100%;
     position: relative;
-    top: 26vh;
+    top: 9.5em;
     overflow: auto;
     display: flex;
     flex-direction: column;
@@ -79,7 +79,7 @@ position: relative;
 
 .buttons-container img{
     top: 0;
-    width: 40vh;
+    width: 15em;
     position: sticky;
     border: #f1c500 solid 5px;
     border-radius: 3%;
@@ -88,7 +88,7 @@ position: relative;
 .directions h4{
     font-size: 18px;
     position: fixed;
-    top: 10vh;
+    top: 10h;
 }
 
 .suggest h1{
@@ -109,22 +109,22 @@ position: relative;
         outline: none;
         }
 }
-.direction-title {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: white;
-  }
+
+.direction-title{
+  padding: 5px;
+}
 
   .direction-container {
     justify-content: space-around;
     align-items:flex-start;
     width: 100%;
-    height: 20%;
+    height: 29em;
     text-align: center;
     position: relative;
-    display: flex;
-    padding: 20px;
+    display: block;
+    padding: 25px;
+    top: 3.5em;
+    color: white;
   }
 
   ul {
@@ -133,6 +133,7 @@ position: relative;
     padding: 0;
     display: block;
     width: 100%;
+    height: 100%;
   }
 
   .showImage-button {
@@ -146,7 +147,7 @@ position: relative;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
-    width: 100%;
+    width: 20em;
   }
 
   .direction-modal {
