--- a/src/App.css
+++ b/src/App.css
@@ -60,12 +60,12 @@ body{
 
 header{
   background-color: #7E0001;
-  justify-content: space-between;
+  justify-content: space-around;
   display: flex;
   top: 0;
   position: fixed;
   width: 100%;
-  height: 6em;
+  height: 7em;
   z-index: 101;
   padding: 4px;
   overflow: -moz-hidden-unscrollable;
@@ -156,7 +156,7 @@ color: white;
   align-items: center;
   padding: 10px;
   color: white;
-  top: 6.1em;
+  top: 6.6em;
   position: fixed;
   background-color: #7E0001;
   z-index: 100;
