--- a/src/showRespose/showResponse.css
+++ b/src/showRespose/showResponse.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     justify-content: space-around;
     padding: 10px;
-    top: 27vh;
+    top: 7em;
     overflow: auto;
 }
 
