--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -67,12 +67,20 @@ position: relative;
     padding: 20px;
     width: 100%;
     position: relative;
-    top: 9.5em;
+    top: 6em;
     overflow: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     color: white;
+}
+
+.title-area p{
+  text-align:center;
+  font-style: normal;
+  letter-spacing: normal;
+  font-weight: lighter;
+
 
 }
 
