--- a/src/displayButton/displayDesign.css
+++ b/src/displayButton/displayDesign.css
@@ -14,27 +14,30 @@
 }
 
 .choices-button p{
+  position: relative;
+  display: flex;
   padding: 10px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .choices-button button{
-  display: inline-flex;
-    justify-content: space-around;
+  display: inline-flexbox;
+    justify-content: center;
     align-items: center;
     text-align: center;
-    position: relative;
     border-radius: 10px;
-    margin-right: 10px;
-    margin-bottom: 10px;
+    margin: 3px;
     background: linear-gradient(to bottom, #c40606, #f1c500); /* Gradient color */
     color: white; /* Text color */
     border: none;
     cursor: pointer;
     transition: background 0.3s ease;
     z-index: 40;
-    width: 15em;
-    height: 1em;
-    padding: 20px;
+    width: 14em;
+    height: min-content;
+    padding: 15px;
 
 
 }
