--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -79,9 +79,39 @@ position: relative;
   text-align:center;
   font-style: normal;
   letter-spacing: normal;
-  font-weight: lighter;
+
+}
 
 
+/* Add these styles to your existing CSS or create a new CSS file */
+
+.loading-spinner-container {
+  position: relative;
+  display: inline-block; /* Adjust display property based on your layout */
+}
+
+.loading-spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-top: 4px solid #3498db;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.gate.loading {
+  opacity: 0.5; /* Adjust opacity based on your design */
+  /* You can add more styles to visually indicate that the image is loading */
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 
