--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -83,38 +83,6 @@ position: relative;
 }
 
 
-/* Add these styles to your existing CSS or create a new CSS file */
-
-.loading-spinner-container {
-  position: relative;
-  display: inline-block; /* Adjust display property based on your layout */
-}
-
-.loading-spinner {
-  border: 4px solid rgba(255, 255, 255, 0.3);
-  border-top: 4px solid #3498db;
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  animation: spin 1s linear infinite;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1;
-}
-
-.gate.loading {
-  opacity: 0.5; /* Adjust opacity based on your design */
-  /* You can add more styles to visually indicate that the image is loading */
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-
 .buttons-container img{
     top: 0;
     width: 15em;
@@ -199,8 +167,8 @@ position: relative;
 
   .direction-modal {
     display: flex;
-    background: #7E0001;
-    width: 17em;
+    background: #ba2828;
+    width: 18.5em;
     align-items: center;
     justify-content: center;
     height: 10em;
@@ -220,7 +188,7 @@ position: relative;
 
   .modal-close {
     margin: 10px;
-    background-color: #ff3d3d;
+    background-color: #ffa908;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -230,5 +198,5 @@ position: relative;
   }
 
   .modal-close:hover {
-    background-color: #ffa908;
+    background-color:darkred;
   }
