--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,12 @@
   font-family:Arial, Helvetica, sans-serif;
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 3) {
+  body{
+    justify-content: space-around;
+  }
+}
+
 /* Media Query for screens with a maximum width of 576px (typical small screens) */
 @media (max-width: 576px) {
   body {
@@ -116,10 +122,11 @@ header{
   display: block;
   margin: 0;
   line-height: normal;
+  font-size: 20px;
 }
 
 .logo-name img{
-  width: 5.5em;
+  width: 6em;
   position: relative;
   align-items: center;
   justify-content: center;
@@ -168,7 +175,7 @@ color: white;
 
 .vr-box{
   position: fixed;
-  top: 15%;
+  top: 13%;
   width: 100%;
   z-index: 102;
   padding: 2vh;
@@ -210,42 +217,53 @@ color: white;
   z-index: 100;
   display: flex;
   justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.text-input{
+  background-color: #7E0001;
+}
+
+.mic{
+  position: relative;
+  background-color: #7E0001;
   width: 100%;
 }
 
 .microphone{
-  background-color: #7E0001;
-  position: sticky;
+  position: fixed;
   bottom: 0; /* Stick it to the bottom of the viewport */
   display: flex;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-  margin-right: 2.3em;
+  padding: 10px;
 
 }
 
 .center-input{
   display: flex;
   align-items: center;
+  justify-content: space-around;
   position: static;
+  text-align: center;
   width: 100%;
   overflow: hidden;
+  padding: 5px;
 }
 input {
   padding: 10px;
-  width: 100%; /* Use the full width of the parent container */
+  width: 20em; /* Use the full width of the parent container */
   margin: 10px; /* You can use shorthand property for margin */
   border-radius: 10px;
   border-color: #f1c500;
 }
 
 /* Media Query for screens with a maximum width of 768px (typical mobile screens) */
-@media (max-width: 768px) {
-  input {
-    width: 15em; /* Adjust the width to take up 90% of the parent container */
-    align-items: center;
-    justify-content: center;
+@media (max-width: 926px) {
+  input{
+    width: 19em;
   }
   body{
     font-size: 1em; /* Make the text slightly smaller on small screens */
@@ -258,6 +276,10 @@ input {
 
 .keyBoard{
   margin-right: 10px;
+}
+
+.closed-back{
+  margin-left: 2em;
 }
 
 .error {
@@ -320,20 +342,22 @@ input {
   align-items: center;
   position: fixed;
     display: flex;
-    top: 65%;
+    top: 67%;
     width: 100%;
     padding: 10px;
+    overflow-y: auto;
 }
 
 .suggestions button{
   background: linear-gradient(to bottom, #c40606, #f1c500); /* Gradient color */
   border: none;
   padding: 1px;
-  border-radius: 20px;
+  border-radius: 10px;
   width: 8em;
   height: 3em;
   display: flex;
   margin-top: 10px;
+  margin-right: 10px;
   align-items: center;
   justify-content: center;
 }
