--- a/src/App.css
+++ b/src/App.css
@@ -216,9 +216,10 @@ color: white;
   overflow: hidden;
   z-index: 100;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
+  height: 5.8em;
 }
 
 .text-input{
@@ -227,18 +228,19 @@ color: white;
 
 .mic{
   position: relative;
-  background-color: #7E0001;
   width: 100%;
 }
 
 .microphone{
   position: fixed;
   bottom: 0; /* Stick it to the bottom of the viewport */
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
   padding: 10px;
+  width: max-content;
+  background-color: #7E0001;
 
 }
 
@@ -291,6 +293,8 @@ input {
   position: fixed;
   z-index: 101;
   display: flex;
+  background-color: rgba(0, 0, 0, 0.548);
+  overflow: hidden;
 }
 
 .error-content{
@@ -302,6 +306,7 @@ input {
   text-align: center;
   padding: 10px;
   border-radius: 5px ;
+  overflow: hidden;
 }
 
 .start{
