--- a/src/buildings/building.css
+++ b/src/buildings/building.css
@@ -163,6 +163,7 @@ position: relative;
     align-items: center;
     width: 100%;
     justify-content: center;
+    height: 100%;
   }
 
   .direction-modal {
@@ -178,6 +179,8 @@ position: relative;
     position: fixed;
     border:#f1c500 solid 2px;
     overflow: hidden;
+    overflow: hidden;
+    
   }
 
   .modal-content {
