--- a/src/App.css
+++ b/src/App.css
@@ -160,8 +160,15 @@ color: white;
 }
 
 .reset-button{
-  position: relative;
+  position: fixed;
   display: flex;
+  left: 0;
+  top: 2.1em;
+  padding: 7px;
+}
+
+.right-icon{
+  padding: 3px;
 }
 
 .desc-hidden {
@@ -214,9 +221,9 @@ color: white;
   bottom: 0;
   position: fixed;
   overflow: hidden;
-  z-index: 100;
+  z-index: 99;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 5.8em;
@@ -356,8 +363,8 @@ input {
 .suggestions button{
   background: linear-gradient(to bottom, #c40606, #f1c500); /* Gradient color */
   border: none;
-  padding: 1px;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 15px;
   width: 8em;
   height: 3em;
   display: flex;
@@ -367,19 +374,23 @@ input {
   justify-content: center;
 }
 
+
 .list-result {
   position: fixed;
   color:#7E0001;
-  bottom: 8vh;
-  width: 95%;
+  bottom: 4.5em;
+  width: 17.5em;
   text-align: left;
-  overflow: auto;
-  height: 20vh;
+    overflow: auto;
+  height: 10em;
+  display: flex;
+  border-radius: 10px;
 }
 
 .list-result::-webkit-scrollbar {
-  width: 1.5vh;
-  height: 20vh;
+  width: 50%;
+  height: 15em;
+  border-radius: 10px;
 }
 
 .list-result::-webkit-scrollbar-thumb {
